# gpmf

./: .gitignore  README.md  __init__.py  miner.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: release.yml
algorithms/: __init__.py  base_algorithm.py  grite.py
algorithms/closed/: glcm.py
algorithms/closed/paraminer/: gradual_mining.py
algorithms/closed/paraminer/src/: rust_closure.rs  rust_miner_engine.rs  rust_oracle.rs
algorithms/seasonal/: msgp.py
benchmarks/: pruning_benchmark.py
core/: dataset.py
data/: toy.txt
data/air+quality/: .~lock.AirQualityUCI.csv#  AirQualityUCI.csv
docs/: getting_started.md  index.md
docs/algorithms/: README.md  ant_graank.md  emerging_gp.md  glcm.md  graank.md  grite.md  msgp.md  paraminer.md  pglcm.md  sgrite.md  tgrad.md
docs/api/: index.md
src/gpmf/: __init__.py  cli.py  config.py  exceptions.py  factory.py
src/gpmf/algorithms/: base_algorithm.py  emerging_gp.py  graank.py  grite.py  sgrite.py
src/gpmf/algorithms/closed/: __init__.py  glcm.py  paraminer_algorithm.py  pglcm.py  pglcm_wrapper.py
src/gpmf/algorithms/closed/paraminer/: Cargo.toml  README.md  __init__.py  __main__.py  bool_matrix.py  datatypes.py  gradual_mining.py  support.py
src/gpmf/algorithms/closed/paraminer/src/: lib.rs  rust_conversion.rs  rust_datatypes.rs  rust_miner.rs
src/gpmf/algorithms/swarm/: ant_graank.py
src/gpmf/algorithms/temporal/: tgrad.py
src/gpmf/benchmarking/: __init__.py  benchmark.py  metrics.py  results.py  stability.py  stats.py
src/gpmf/core/: __init__.py  data_structures.py  result.py
src/gpmf/datasets/: __init__.py
src/gpmf/utils/: bitmap.py
tests/: test_data_structures.py  test_dataset.py  test_datasets.py  test_emerging_gp.py  test_graank.py  test_grite.py
utils/: __init__.py  formatters.py  validators.py
