[project]
name = "gradual-mining"
version = "0.3.1"
description = "Unified Python package for gradual pattern mining with multiple algorithms"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Gradual Mining Team"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = ["data mining", "pattern mining", "gradual patterns", "knowledge discovery", "frequent itemsets"]

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
fuzzy = [
    "scikit-fuzzy>=0.4.0",
    "ypstruct>=0.0.2",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "mypy>=0.950",
    "ruff>=0.1.0",
]
all = [
    "gradual-mining[fuzzy,dev]",
]

[project.scripts]
gradual-mine = "gpmf.cli:main"

# ── Build backend ──────────────────────────────────────────────────────────
# maturin compiles the Rust extension (paraminer_gradual_rust) and packages
# it alongside the Python code in a single platform wheel.
[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
# Path to the Rust crate that provides paraminer_gradual_rust
manifest-path = "src/gpmf/algorithms/closed/paraminer/Cargo.toml"
# Python source root (contains the gpmf/ package)
python-source = "src"
# Extension module placed inside the gpmf package hierarchy so the relative
# import `from .paraminer_gradual_rust import …` works in __init__.py
module-name = "gpmf.algorithms.closed.paraminer.paraminer_gradual_rust"
# Features to enable when building the Rust extension
features = ["pyo3/extension-module", "pyo3/abi3-py39"]

# ── Dev tools ──────────────────────────────────────────────────────────────
[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--verbose"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
